--- a/Asignaciones/asignacion4/css/estilos.css
+++ b/Asignaciones/asignacion4/css/estilos.css
@@ -2,14 +2,15 @@
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    /*color: #ffffff;*/
 }
-
 header{
     width: 100%;
     height: 100px;;
     /*background-color: rgba(0, 0, 0, 0.4);*/ /*ARREGLAR ESTO*/
-    position: fixed;
+    position: fixed;/*
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;*/
     z-index: 99;
 }/*
 header::before{
@@ -37,6 +38,14 @@ header::before{
 .logo img{
 
 }
+
+/*menu responsive*/
+.icono {
+    display: none;
+}
+
+
+/*menu*/
 nav{
     width: 70%;
     height: 70px;
@@ -44,21 +53,34 @@ nav{
     float: left;
     text-align: right;
     box-sizing: border-box;
+    /*No usar esto solo en el responsive*/
+    /*display: flex;*/
 }
 nav ul li{
     display: inline-block;
     padding: 20px;
     margin: auto;
 }
-nav ul li a{
+nav ul li a/*.enlaces a*/{
     color: white;
     text-decoration: none;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 1px;
+    /*
+    display: inline-block;
+    padding: 20px;
+    margin: auto;
+    */
 }
-
+.enlaces2{
+    /*position: fixed;*/
+    height: 100vh;
+    right: 0;
+    justify-content: space-around;
+    align-items: center;
+}
 
 
 
@@ -94,6 +116,9 @@ div{
 }
 ul{
     list-style: none;
+}
+label{
+    color: #ffffff;
 }
 .container-header{
     height: 100%!important;
@@ -152,6 +177,7 @@ ul{
     display: inline-block;
     padding: 5px;
     padding-right: 20px;
+    color: #ffffff;
 }
 
 .bienvenido-information > p{
@@ -203,6 +229,62 @@ ul{
     width: calc(50% - 100px);
     background-color: red
 }
+
+/*card*/
+.title{
+    text-align: center;
+    font-size: 40px;
+    margin-top: 100px;
+    font-weight: 100;
+    margin-bottom: 50px;
+}
+
+.container-ciudades{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 100px;
+}
+.container-ciudades .card{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.container-ciudades .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+
+}
+.container-ciudades .card img{
+    width: 330px;
+    height: 220px;
+}
+.container-ciudades .card h4{
+    font-weight: 600;
+}
+.container-ciudades .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.container .card a{
+    font-weight: 500;
+    text-decoration: none;
+}
+
+
+
 
 
 
@@ -309,54 +391,47 @@ footer{
     padding: 40px;
 
 }
+
+
+
+
 @media screen and (max-width: 1200px){
     
-.container-footer{
-    flex-wrap: wrap;
+
+.icono{
+display: flex;
+    justify-content: center;
+    height: 70px;
+    align-items: center;
+    color: #fff;
+    background: transparent;
+    padding: 20px;
+    z-index: 2003;
+    cursor: pointer;
+    margin-right: 40px;
 }
-.logo-redes{
+
+.enlaces{
+    position: fixed;
+    height: 100vh;
+    right: 0;
     width: 100%;
-}
-.soporte, .listas-footer, .ciudades{
-    margin-top: 40px;
-}
-.h2-footer{
-    margin-bottom: 10px;
-    padding: 10px;
-}
-.bienvenido{
-    position: absolute;
-    padding: 5px;
-    padding-top: 250px;
-    width: 60%;
-}
-.bienvenido h1{
-    font-size: 2em;
-}
-.btn {
-    margin-top: 20px;
-}
-.img-header-information:before{
-    width: 70%;
-}
-.container.header{
-    width: 70%;
-}
-.bienvenido-information{
-    padding: 15px;
-    width: 70%;
-    padding-top: 150px;
-    padding-right: 0;
+    flex-direction: column;
+    transition: all 1s ease;
+    z-index: 2002;
+    justify-content: space-around;
+    align-items: center;
+    background: linear-gradient(to right, #eea849, #f46b45);
     
 }
-.container-header{
-    width: auto;
+
+.uno{
+    clip-path: circle(0% at 100% 0%)
 }
-.bienvenido-information h1 {
-    color: #fff;
-    font-size: 45px;
-    line-height: 1;
-    margin-bottom: 70px;
+.dos{
+    clip-path: circle(150% at 100% 0%);
 }
+
+
 }
 
